--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Docs
         run: |
           cargo doc --no-deps --release
-          echo|set /p="<meta http-equiv="refresh" content="0; url=win32_notif/index.html">" > docs/index.html
+          echo '<meta http-equiv="refresh" content="0; url=win32_notif/index.html">' > target/doc/index.html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
