--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "win32_notif"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 description = "Wrapper around Windows UWP XAML (WinRT) Notification api"
 license = "MIT"
 repository = "https://github.com/AHQ-Softwares/win32_notif"
 authors = ["AHQ Softwares", "AHQ <ahqsecret@gmail.com>"]
+documentation = "https://ahq-softwares.github.io/win32_notif/"
 
 [package.metadata.docs.rs]
 all-features = true
