--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "win32_notif"
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 description = "Wrapper around Windows UWP XAML (WinRT) Notification api"
 license = "MIT"
@@ -26,3 +26,4 @@ windows = { version = "0.61", features = [
 [features]
 default = ["unsafe"]
 unsafe = []
+xmlprint = []
