--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "win32_notif"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 description = "Wrapper around Windows UWP XAML (WinRT) Notification api"
 license = "MIT"
@@ -26,6 +26,7 @@ windows = { version = "0.62", features = [
   "Win32_UI_WindowsAndMessaging",
   "Win32_System_Com",
   "Data_Xml_Dom",
+  "Globalization",
   "Foundation_Collections",
 ] }
 windows-core = "0.62"
