--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "win32_notif"
-version = "0.9.2"
+version = "0.10.0"
 edition = "2021"
 description = "Wrapper around Windows UWP XAML (WinRT) Notification api"
 license = "MIT"
@@ -19,7 +19,7 @@ targets = [
 ]
 
 [dependencies]
-windows = { version = "0.62", features = [
+windows = { version = "~0.62", features = [
   "UI_Notifications",
   "Win32_UI_Notifications",
   "Win32_UI_Shell",
@@ -29,9 +29,21 @@ windows = { version = "0.62", features = [
   "Globalization",
   "Foundation_Collections",
 ] }
-windows-core = "0.62"
+windows-core = "~0.62"
+windows-registry = { version = "~0.6", optional = true }
+
+quick-xml = "~0.38"
 
 [features]
-default = []
-# Enables unsafe functions
-unsafe = []
+default = ["registration"]
+
+# Register your AUMID in win32 registry
+registration = ["dep:windows-registry"]
+
+# Compatibility purposes
+# Stability not guaranteed
+unsafe = ["experimental"]
+
+# Allows you to access the underlying experimental apis
+# Stability not guaranteed
+experimental = []
